[package]
name = "donldr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }

http = "1.1.0"
reqwest = { version = "0.12.4", features = ["stream"] }
tokio-util = { version = "0.7.10", features = ["compat", "io"] }
futures = "0.3.30"
memmap2 = "0.9.4"
colored = "2.1.0"
